--- a/src/test/resources/projectdata.properties
+++ b/src/test/resources/projectdata.properties
@@ -2,7 +2,7 @@
 #Sat Feb 08 01:21:39 IST 2025
 ConfirmPasswordPlaceholder=Password Confirm
 accountPageTitle=My Account
-appURL=https\://tutorialsninja.com/demo/
+appURL=https://tutorialsninja.com/demo/
 browserName=chrome
 emailPlaceholder=E-Mail
 existingEmail=abc@gmail.com
@@ -16,13 +16,13 @@ invalidEmailThree=eric@gmail
 invalidEmailTwo=eric@
 invalidPassword=67890
 invalidTelephone=abcdef
-landingPageURL=https\://tutorialsninja.com/demo/index.php?route\=common/home
+landingPageURL=https://tutorialsninja.com/demo/index.php?route\=common/home
 lastName=Yadav
 lastNamePlaceholder=Last Name
 mismatchingPassword=abcde
 passwordPlaceholder=Password
 registerPageTitle=Register Account
-registerPageURL=https\://tutorialsninja.com/demo/index.php?route\=account/register
+registerPageURL=https://tutorialsninja.com/demo/index.php?route\=account/register
 sampleEmail=xyzabc123@gmail.com
 samplePassword=xyzabc
 samplePassword2=12345
